<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffaf6e"
    android:paddingTop="15dp">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:src="@drawable/logo_temple"
        android:maxHeight="60dp"
        android:contentDescription="@string/temple"
        android:maxWidth="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:foregroundGravity="center_vertical|center"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#ffb06f" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:weightSum="1"
        android:layout_marginBottom="5dp"
        android:id="@+id/linearLayout">


        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/Facebook"
            android:layout_gravity="top|bottom"
            android:layout_weight=".2"
            android:contentDescription="@string/Facebook"
            android:src="@drawable/facebook" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Mail"
            android:contentDescription="@string/Mailing"
            android:layout_weight=".2"
            android:src="@drawable/mail" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Pics"
            android:contentDescription="@string/Pics"
            android:layout_weight=".2"
            android:src="@drawable/camera" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/QA"
            android:contentDescription="@string/Q"
            android:layout_weight=".2"
            android:src="@drawable/microphone" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Around"
            android:contentDescription="@string/Around"
            android:layout_weight=".2"
            android:src="@drawable/compass" />
    </LinearLayout>

</RelativeLayout>
